tests/negative/test_switch_no_branches.orb
fnc main() {
    switch (1) {}
}